# bsopt.

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  quality_gates.sh
.github/workflows/: ci.yml  deploy.yml  scraper.yml
apps/api/: .coverage  .env  .env.example  .rayignore  Dockerfile  coverage.json  coverage_output.txt  docker-compose.yml  fix_lints.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff_errors.txt  scratch.py  scratch_check_schema.py  unit_test_cov.txt
apps/api/grafana/dashboards/: api_performance.json
apps/api/grafana/provisioning/dashboards/: dashboards.yml
apps/api/mlruns/0/: meta.yaml
apps/api/nginx/: nginx.conf
apps/api/prometheus/: prometheus.yml
apps/api/prometheus/rules/: alerts.yml
apps/api/scratch/: debug_mc.py  debug_ray.py  debug_trinomial.py  fix_imports.py  purge_queues.py  test_ray.py  test_ray_simple.py
apps/api/scripts/: check_schema.py  collect.py  init_db.py  init_minio.py  run_experiments.py
apps/api/src/: config.py  exceptions.py  logging_config.py  main.py  metrics.py
apps/api/src/analysis/: convergence.py  statistics.py
apps/api/src/auth/: dependencies.py
apps/api/src/cache/: decorators.py  redis_client.py
apps/api/src/data/: pipeline.py  transformers.py  validators.py  watchdog_handler.py
apps/api/src/database/: neon_client.py  repository.py  schema.sql
apps/api/src/methods/: __init__.py  analytical.py  base.py
apps/api/src/methods/finite_difference/: __init__.py  crank_nicolson.py  explicit.py  implicit.py
apps/api/src/methods/monte_carlo/: __init__.py  antithetic.py  control_variates.py  quasi_mc.py  standard.py
apps/api/src/methods/tree_methods/: __init__.py  binomial_crr.py  richardson.py  trinomial.py
apps/api/src/mlops/: drift_detector.py  feature_store.py  mlflow_tracker.py  model_registry.py  ray_runner.py
apps/api/src/notifications/: email.py  hierarchy.py  push.py
apps/api/src/queue/: consumer.py  publisher.py  rabbitmq_client.py
apps/api/src/routers/: __init__.py  downloads.py  experiments.py  health.py  market_data.py  mlops.py  notifications.py  pricing.py  scrapers.py  websocket.py
apps/api/src/scrapers/: base_scraper.py  nse_next_scraper.py  scraper_factory.py  spy_scraper.py
apps/api/src/storage/: minio_client.py  storage_service.py
apps/api/src/websocket/: channels.py  manager.py
apps/api/tests/: conftest.py
apps/api/tests/data/: spy_mock.html
apps/api/tests/e2e/: test_auth_flow.py  test_compression.py  test_dashboard_pages.py  test_download_flow.py  test_metrics_endpoint.py  test_mlops_page.py  test_realtime_push.py
apps/api/tests/integration/: test_api.py  test_cache.py  test_compression.py  test_mlops.py  test_pipeline.py  test_pipeline_e2e.py  test_queue_infra.py  test_queue_integration.py  test_ray_pricing.py  test_ray_runner.py  test_repository.py  test_routers.py  test_scrapers.py  test_storage.py  test_storage_service.py  test_websocket.py  test_websocket_endpoint.py
apps/api/tests/unit/: test_analysis.py  test_app.py  test_auth.py  test_basics.py  test_cache.py  test_infra_lifecycle.py  test_methods.py  test_mlops.py  test_neon_lifecycle.py  test_notifications.py  test_pipeline.py  test_queue.py  test_repository.py  test_repository_exhaustive.py  test_scrapers.py  test_storage.py  test_transformers.py  test_validators.py  test_watchdog_handler.py  test_websocket_manager.py
infra/prometheus/: prometheus.yml
migrations/: 001_initial_schema.sql
src/app/: globals.css  layout.tsx
src/app/dashboard/: page.tsx
src/components/: PricingCalculator.tsx
