[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name            = "bsopt-api"
version         = "1.0.0"
requires-python = ">=3.14.4"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "aio-pika>=9.4.0",
    "aioboto3>=13.0.0",
    "ray[default]>=2.10.0",
    "mlflow>=2.13.0",
    "watchdog>=5.0.0",
    "python-multipart>=0.0.9",
    "anyio>=4.4.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "playwright>=1.46.0",
    "brotli-asgi>=1.0.0",
    "pandas>=2.2.0",
    "xlsxwriter>=3.2.0",
    "pywebpush>=2.3.0",
    "resend>=2.29.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
compile-bytecode = true   # faster cold-start in Docker
 
[tool.uv.sources]
# Pin exact sources for reproducibility
 
[tool.black]
line-length    = 100
target-version = ["py314"]
 
[tool.isort]
profile     = "black"
line_length = 100
 
[tool.ruff]
line-length    = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E","W","F","I","B","C4","UP","N","S","ANN","SIM","TCH",
  "RUF","ERA","PIE","PL","PERF","FURB",
]
ignore = ["ANN101","ANN102","S101","PLC0415","B008","ANN401","E501","TC001","TC002","TC003","PLR2004","SIM105","S110","PLR0913","ERA001","SIM102","N806","PERF203","SIM108","T201","UP007"]
 
[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S101","ANN"]
"scripts/**" = ["S101"]
"src/config.py" = ["S105"]
 
[tool.mypy]
python_version         = "3.14"
strict                 = true
warn_return_any        = true
warn_unused_ignores    = true
warn_redundant_casts   = true
disallow_untyped_defs  = true
disallow_any_generics  = true
no_implicit_optional   = true
show_error_codes       = true
pretty                 = true
ignore_missing_imports = true
 
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--strict-markers --tb=short -v"
markers = [
  "unit: pure unit tests — no network — real infrastructure via conftest fixtures",
  "integration: tests against real NeonDB, Redis, RabbitMQ, MinIO, Ray",
  "e2e: Playwright browser tests against the full docker-compose stack",
]
 
[tool.coverage.run]
source  = ["src"]
omit    = ["tests/*","scripts/*"]
branch  = true
 
[tool.coverage.report]
fail_under    = 100
show_missing  = true
skip_covered  = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
  "\\.\\.\\.",
]
