[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "bsopt-api"
version         = "1.0.0"
requires-python = ">=3.14.4"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.1",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "aio-pika>=9.5.0",
    "aioboto3>=13.2.0",
    "ray[default]>=2.10.0",
    "mlflow>=2.13.0",
    "watchdog>=5.0.0",
    "python-multipart>=0.0.12",
    "brotli-asgi>=1.4.0",
    "httpx>=0.27.2",
    "scipy>=1.14.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pywebpush>=1.14.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
compile-bytecode = true

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.isort]
profile     = "black"
line_length = 100

[tool.ruff]
line-length    = 100
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
  "E","W","F","I","B","C4","UP","N","S","ANN","SIM","TCH",
  "RUF","ERA","PIE","PL","PERF","FURB",
]
ignore = ["S101","PLC0415","B008","ANN401","PLW0603","PLR0913","E501","PLR6301","PLR2004","RUF029","ERA001","PLR0914","PLR0917","PLR0912","PLR0915","PLR0916", "RUF069", "PLC1901", "B017", "S110", "PLC2701", "ANN001", "ANN201", "B904", "S105", "S108", "E701", "SIM105", "B903", "F821", "PIE790", "F404", "E402", "I001"]

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S101","ANN"]
"scripts/**" = ["S101"]

[tool.mypy]
python_version         = "3.14"
strict                 = true
warn_return_any        = true
warn_unused_ignores    = true
warn_redundant_casts   = true
disallow_untyped_defs  = true
disallow_any_generics  = true
no_implicit_optional   = true
show_error_codes       = true
pretty                 = true

[[tool.mypy.overrides]]
module = ["aioboto3.*", "ray.*", "mlflow.*", "pywebpush.*", "scipy.*", "asyncpg.*", "prometheus_client.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--strict-markers --tb=short -v"
markers = [
  "unit: pure unit tests — no network — real infrastructure via conftest fixtures",
  "integration: tests against real NeonDB, Redis, RabbitMQ, MinIO, Ray",
  "e2e: Playwright browser tests against the full docker-compose stack",
]

[tool.coverage.run]
source  = ["src"]
omit    = ["tests/*","scripts/*"]
branch  = true

[tool.coverage.report]
fail_under    = 100
show_missing  = true
skip_covered  = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
  "\\.\\.\\.",
]
